# debian-pkg-xshisen

./: ChangeLog  INSTALL  INSTALL.jp  LICENSE  Makefile.in  README  actions.C  body.C  body.h  callbacks.C  common.C  components.h  config.h.in  configure  configure.in  fallback.h  gamesize.C  history.C  image.C  kconv.C  kconv.h  mahjong.C  main.C  menubar.C  nonstandard.C  readxpm.C  score.C  timer.C  xshisen.scores
debian/: README.Debian  changelog  control  copyright  dirs  menu  rules  watch
debian/patches/: 0001-Makefile-and-polish-resource-fixes.patch  0002-Manual-page-fixes.patch  0003-xshisen-allows-local-user-to-gain-GID-games.patch  0004-xshisen-buffer-overflow-when-handling-GECOS-field.patch  0005-patch-numerous-security-holes-in-xshisen.patch  0006-Fix-format-string-use.patch  0007-Fix-version-number-in-resources.patch  0008-Fix-FTBFS-with-gcc-4.7-by-using-this-foo-where-neede.patch  0009-fix-xshisen-manpage-typos.patch  10_oldfixes.patch  11_manpage_fixes.patch  20_autotools_update.patch  213957.patch  289784.patch  292065.patch  40_format_security.patch  fix-ftbfs-with-gcc-4.7  series
lang/: XShisen.ad  XShisen.ad.ja_JP  XShisen.ad.ja_JP.JIS7  XShisen.ad.ja_JP.SJIS  XShisen.ad.pl
man/: xshisen.6  xshisen.6.ja_JP  xshisen.6.ja_JP.JIS7  xshisen.6.ja_JP.SJIS
pixmaps/s1/: chun.xpm  haku.xpm  hana.xpm  hatsu.xpm  hishi.xpm  m1.xpm  m2.xpm  m3.xpm  m4.xpm  m5.xpm  m6.xpm  m7.xpm  m8.xpm  m9.xpm  nan.xpm  p1.xpm  p2.xpm  p3.xpm  p4.xpm  p5.xpm  p6.xpm  p7.xpm  p8.xpm  p9.xpm  pei.xpm  s1.xpm  s2.xpm  s3.xpm  s4.xpm  s5.xpm  s6.xpm  s7.xpm  s8.xpm  s9.xpm  sha.xpm  ton.xpm
pixmaps/s2/: chun.xpm  haku.xpm  hana.xpm  hatsu.xpm  hishi.xpm  m1.xpm  m2.xpm  m3.xpm  m4.xpm  m5.xpm  m6.xpm  m7.xpm  m8.xpm  m9.xpm  nan.xpm  p1.xpm  p2.xpm  p3.xpm  p4.xpm  p5.xpm  p6.xpm  p7.xpm  p8.xpm  p9.xpm  pei.xpm  s1.xpm  s2.xpm  s3.xpm  s4.xpm  s5.xpm  s6.xpm  s7.xpm  s8.xpm  s9.xpm  sha.xpm  ton.xpm
